# dagger

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.sh
apps/: cinder_graph_gen_main.cpp  cycle_detector_main.cpp  graph_generator_main.cpp  parse_main.cpp
docs/: Results.md  development_log.md  project_proposal.md  team_contract.md
include/core/: cycle_detector.h  fileexplorer.h  graph.h  graph_generator.h  textparser.h  utils.h
src/core/: cycle_detector.cpp  fileexplorer.cpp  graph.cpp  graph_generator.cpp  textparser.cpp
tests/: test_cycledetector.cpp  test_fileexplorer.cpp  test_graphgen.cpp  test_main.cpp  test_textparser.cpp
tests/test-repo/: main.cpp
tests/test-repo/cyclical-folder/: fifth.cc  fourth.hpp  root.h  second.cpp  third.cpp
tests/test-repo/naming-collisions/: cool.cc  cool.h  cool.hpp  main.cpp
tests/test-repo/src/: another_header.h  header.h  header_pp.hpp  random_cc_file.cc  source_file.cpp
